--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     </table>
 
-  <h3> <a href="CONTACT.HTML"> Contact me </a> </h3>
+  <h3> <a href="contact.html"> Contact me </a> </h3>
 
 </body>
 
