--- a/Contact.html
+++ b/Contact.html
@@ -15,7 +15,7 @@
       <br>
       <label>Your comments:</label>
       <br>
-      <textarea name="name" rows="10" cols="30"></textarea>
+      <textarea name="yourComment" rows="10" cols="30"></textarea>
       <br>
       <label>keep in touch?</label>
       <input type="checkbox" name="wantUpdates">
@@ -23,7 +23,7 @@
       <br>
       <input type="submit">
 <br>
-<a href="index.html">Back to profile</a>
+<a href="root/index.html">Back to profile</a>
       <br>
     </form>
   </body>
