--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
       <br>
       <input type="submit">
 <br>
-<a href="root/index.html">Back to profile</a>
+<a href="index.html">Back to profile</a>
       <br>
     </form>
   </body>
